--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
                 cache: 'default'
             };
 
-            let myURL = "http://localhost:3001/reply";
+            let myURL = "http://localhost:3001/";
 
 
             fetch(myURL, myInit)
@@ -104,7 +104,7 @@
 				cache: 'default',
 				body: myBody
 			};
-			let myURL = "http://localhost:3001/reply";
+			let myURL = "http://localhost:3001/";
 
 			//launch the request
 			fetch(myURL, myInit)
@@ -143,7 +143,7 @@
 				cache: 'default',
 				body: myBody
 			};
-			let myURL = "http://localhost:3001/reply";
+			let myURL = "http://localhost:3001/";
 
 			//launch the request
 			fetch(myURL, myInit)
@@ -183,7 +183,7 @@
                 cache: 'default',
                 body: myBody
             };
-            let myURL = "http://localhost:3001/reply"; //URL du serveur qui va être lancé
+            let myURL = "http://localhost:3001/"; //URL du serveur qui va être lancé
 
             console.log(inputTitle.value); // Envoie le titre
             console.log(inputBrain.id); // Envoie "cerveau1" ou "cerveau2"
