correction bugs réponse bot

--- a/client/index.html
+++ b/client/index.html
@@ -266,7 +266,7 @@
                     return httpResponse.text();
                 })
                 .then((responseBody) => {
-                    reloadList();
+                    //reloadList();
                     //clear fields
                     inputTitle.value = "";
                     inputBrain.value = "";
@@ -350,7 +350,8 @@
     <div id="CommunicateChatBotModal" class="modal">
 
         <div class="modal-content">
-            <form onSubmit="sendMessage()">
+            <!--<form onSubmit="sendMessage()"> --> 
+                <!-- <form action="http://localhost:3001/reply"   onSubmit="sendMessage()"> 
                 <fieldset>
                     <legend>Send a Message</legend>
 
@@ -361,12 +362,27 @@
                                     placeholder="Please wait... loading...">
                             </td>
                             <td class="send-button">
-                                <input type="submit" value="Send">
+                                <input type="submit" value="Send" onclick="sendMessage()">
                             </td>
                         </tr>
                     </table>
                 </fieldset>
-            </form>
+            </form> -->
+            <fieldset>
+                <legend>Send a Message</legend>
+
+                <table class="input-table">
+                    <tr>
+                        <td class="text-box">
+                            <input type="text" size="40" name="message" id="message" autocomplete="off" 
+                                placeholder="Please wait... loading...">
+                        </td>
+                        <td class="send-button">
+                            <input type="submit" value="Send" onclick="sendMessage()">
+                        </td>
+                    </tr>
+                </table>
+            </fieldset>
         </div>
 
     </div>
