Menu créé+ npm install lowdb

--- a/client/communicate.html
+++ b/client/communicate.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>Bienvenue sur l'interface de gestion de ChatBots</h1>
+    <h1>Communiquer avec les Bots</h1>
   </header>
 
   <nav>
