--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,17 @@
 <html>
 
 <head>
+
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
   <title>Accueil</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+</head>
+
 
 </head>
 
@@ -14,10 +21,10 @@
     <h1>Bienvenue sur l'interface de gestion de ChatBots</h1>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="./administration.html">Gestion des Bots</a></li>
-      <li><a href="./communicate.html">Communiquer avec les Bots</a></li>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" href="./administration.html">Gestion des Bots</a></li>
+      <li><a class="nav-link" href="./communicate.html">Communiquer avec les Bots</a></li>
     </ul>
   </nav>
 
