--- a/client/communicate.html
+++ b/client/communicate.html
@@ -54,7 +54,7 @@
           for (let bot of setOfBots) {
             //listeDeroulanteBot.append("bot"); //On ajoute les Bots à listeDeroulanteBot avec innerHTML
             console.log(bot);
-            listeDeroulanteBot.innerHTML = listeDeroulanteBot.innerHTML + `<option id="${bot.id}"> Bot n°${bot.id} - ${bot.title} </option>`;
+            listeDeroulanteBot.innerHTML = listeDeroulanteBot.innerHTML + `<option id="${bot.id}"> Bot n°${bot.id} - ${bot.name} </option>`;
           }
         })
         .catch((err) => {
